1. Added user/posts and user/followers and dynamic segments for users 2. Bugs: user/following not showing; not able to get user name from URL

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -214,7 +214,7 @@ a:visited{
 }
 .user_profile{
   margin: 0 auto;
-  width: 100px;
+  width: 200px;
   margin-top: 20px;
 }
 .follow_action{
@@ -225,4 +225,8 @@ a:visited{
   background-color: white;
   margin-left: 10px;
   width: 80px;
+}
+a.active{
+  text-decoration: underline;
+  color: grey;
 }
